tests/snapshots/output_snapshots__scan_results_ascii.snap
---
source: tests/output_snapshots.rs
expression: normalize_snapshot(table.render())
---
+-------------------+------+----------+---------------------------------+--------------------------+
| File              | Line | Severity | Pattern                         | Command                  |
+==================================================================================================+
| scripts/deploy.sh |   17 | HIGH     | core.git:force-push             | git push --force origin  |
|                   |      |          |                                 | main                     |
|-------------------+------+----------+---------------------------------+--------------------------|
| ops/cleanup.sh    |   42 | CRIT     | core.filesystem:rm-rf-general   | sudo rm -rf /var/lib/app |
+-------------------+------+----------+---------------------------------+--------------------------+
